# amw

./: data_exploration.ipynb  dataloader.py  image_resolutions.json  pyproject.toml  requirements.txt  resolution_counts.txt  utils.py
notebooks/: data_exploration.ipynb
src/: download_dataset.py  image_scaling.py  model.py  test.ipynb
